--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,7 +3,6 @@
     padding: 0;
 }
 #cajaIzquierda{
-    display: flex;
     align-self: flex-end;
 }
 
@@ -21,6 +20,10 @@
     display: flex;
     border: 1px solid black;
     background-color: lightgray;
+}
+
+#combinaciones{
+    display: flex;
 }
 
 main{
